updated bonus excercise

--- a/tutorial/MSc_PA_practical_exercise.html
+++ b/tutorial/MSc_PA_practical_exercise.html
@@ -1583,7 +1583,7 @@ margin-left: 0 !important;
           Implementing Marxan</a></li>
           <li><a href="#exercise-5-ignore-cost" id="toc-exercise-5-ignore-cost">Exercise 5: Ignore
           cost</a></li>
-          <li><a href="#bonus-points-using-your-own-sdm" id="toc-bonus-points-using-your-own-sdm">Bonus points: Using
+          <li><a href="#going-further-using-your-own-sdm" id="toc-going-further-using-your-own-sdm">Going further: Using
           your own SDM</a></li>
           <li><a href="#find-out-more" id="toc-find-out-more">Find out
           more</a></li>
@@ -2275,15 +2275,14 @@ plot(sr, main = &quot;without cost&quot;, axes = FALSE)
 par(mfrow=c(1,1))# go back to only 1 plot
 </code></pre>
 </div>
-<div id="bonus-points-using-your-own-sdm" class="section level1">
-<h1>Bonus points: Using your own SDM</h1>
-<p><strong>We will not help you with this - you need to develop the code
-yourself</strong></p>
-<p>As a bonus, you could try to find areas that capture 30% of your own
-SDM species for the least cost. Or capture as much of your species as
-possible within a budget. This can help you discuss conservation
-implications and trade-offs for your species.</p>
-<p>Here are the steps you need to follow:</p>
+<div id="going-further-using-your-own-sdm" class="section level1">
+<h1>Going further: Using your own SDM</h1>
+<p><strong>This is not part of the practical</strong></p>
+<p>Later, once you have your SDM you could try to find areas that
+capture 30% of your own species for the least cost. Or capture as much
+of your species as possible within a budget. This can help us think
+about conservation implications and trade-offs for our species.</p>
+<p>Here are the steps you would need to achieve this:</p>
 <ol style="list-style-type: decimal">
 <li><p>Import your species distribution raster using
 <code>terra::rast()</code> (you could name it <code>my_species</code>).
